# web_modul_8

./: 1.txt  README.md  config.ini  pyproject.toml
mongoEngineSample/: fill_database.py  models.py  query_cycle.py
mongo_db/: connect_db.py  fill_database.py  models.py
mongo_engine_sample/: fill_database.py  models.py  query_cycle.py
pymongo/: config.ini  connect_db.py
rabbitMQ/: consumer.py  fill_db.py  models.py  producer.py
rabbitMQ/additional/: consumer_email.py  consumer_sms.py  fill_db.py  models.py  producer.py
