[tool.poetry]
name = "modul-8"
version = "0.1.0"
description = ""
authors = ["ortursucceeh <109922331+ortursucceeh@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "modul_8"}]

[tool.poetry.dependencies]
python = "^3.10"
pymongo = {extras = ["srv", "tls"], version = "^4.3.3"}
mongoengine = "^0.25.0"
configparser = "^5.3.0"
redis = "^4.4.2"
pika = "^1.3.1"
redis-lru = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
